feat(admin): Implement admin command and main GUI

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,8 @@ commands:
   bedwars:
     description: Commande principale de HeneriaBedwars.
     aliases: [bw, hbw]
+
+permissions:
+  heneriabw.admin:
+    description: Donne accès à toutes les commandes d'administration de HeneriaBedwars.
+    default: op
