--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -43,4 +43,28 @@ shop-categories:
   'blocks_category':
     title: "Blocs"
     rows: 5
-    items: {} # à remplir plus tard
+    items:
+      'wool':
+        material: WHITE_WOOL
+        name: "&fLaine"
+        amount: 16
+        cost:
+          resource: IRON
+          amount: 4
+        slot: 10
+      'oak-planks':
+        material: OAK_PLANKS
+        name: "&6Planches de Chêne"
+        amount: 16
+        cost:
+          resource: IRON
+          amount: 12
+        slot: 11
+      'end-stone':
+        material: END_STONE
+        name: "&ePierre de l'End"
+        amount: 12
+        cost:
+          resource: IRON
+          amount: 24
+        slot: 12
