--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -17,6 +17,13 @@ main-menu:
         - "&7Pour construire et défendre"
       slot: 11
       category: 'blocks_category'
+    'utilities':
+      material: FIRE_CHARGE
+      name: "&6Utilitaires"
+      lore:
+        - "&7Objets spéciaux"
+      slot: 12
+      category: 'utilities_category'
 
 # Définition d'une catégorie d'objets
 shop-categories:
@@ -68,3 +75,39 @@ shop-categories:
           resource: IRON
           amount: 24
         slot: 12
+  'utilities_category':
+    title: "Utilitaires"
+    rows: 5
+    items:
+      'fireball':
+        material: FIRE_CHARGE
+        name: "&cBoule de Feu"
+        amount: 1
+        cost:
+          resource: IRON
+          amount: 40
+        slot: 10
+      'tnt':
+        material: TNT
+        name: "&cTNT"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 8
+        slot: 11
+      'ender_pearl':
+        material: ENDER_PEARL
+        name: "&dPerle de l'End"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 4
+        slot: 12
+      'bridge_egg':
+        material: EGG
+        name: "&aPont en œuf"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 1
+        slot: 13
