--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,12 +2,16 @@ void-kill-height: 0
 trap-radius: 10
 
 database:
-  type: sqlite # sqlite or mysql
-  save-interval: 5 # minutes between automatic saves
-  mysql:
-    host: localhost
-    port: 3306
-    database: bedwars
-    username: root
-    password: ""
-    useSSL: false
+    type: sqlite # sqlite or mysql
+    save-interval: 5 # minutes between automatic saves
+    mysql:
+      host: localhost
+      port: 3306
+      database: bedwars
+      username: root
+      password: ""
+      useSSL: false
+
+mobs:
+  iron-golem:
+    damage: 4.0
