--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -19,6 +19,7 @@ errors:
   lobby-not-set: "&cLe lobby n'est pas défini."
   team-incomplete: "&cToutes les équipes n'ont pas leur spawn et leur lit définis."
   no-teams-configured: "&cAucune équipe configurée."
+  build-outside-boundaries: "&cVous ne pouvez pas construire en dehors de la zone autorisée."
 
 commands:
   main-usage: "&eUsage: /{label} <admin|join|leave>"
