--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        <repository>
+            <id>decentholograms</id>
+            <url>https://repo.decentholograms.com/repository/maven-public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -80,6 +84,12 @@
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.11.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.decentsoftware</groupId>
+            <artifactId>DecentHolograms</artifactId>
+            <version>2.8.4</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
