--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,3 +15,8 @@ database:
 mobs:
   iron-golem:
     damage: 4.0
+
+generator-holograms:
+  height: 2.5
+  diamond: "&bDiamants dans &f%time%s"
+  emerald: "&aÉmeraudes dans &f%time%s"
