fix(build): Add tr7zw repository for transitive dependencies
feat(game): Add generator holograms

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,3 +15,11 @@ database:
 mobs:
   iron-golem:
     damage: 4.0
+
+generator-holograms:
+  diamond:
+    text: "&bDiamant dans &f{time}"
+    height: 2.5
+  emerald:
+    text: "&aÉmeraude dans &f{time}"
+    height: 2.5
