feat(game): Add generator holograms via DecentHolograms

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -15,3 +15,7 @@ database:
 mobs:
   iron-golem:
     damage: 4.0
+
+generator-holograms:
+  diamond: "&bDiamant dans &f{time}s"
+  emerald: "&aÉmeraude dans &f{time}s"
