--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,8 @@ main: com.heneria.bedwars.HeneriaBedwars
 api-version: '1.21'
 author: tomashb
 
+softdepend: [DecentHolograms]
+
 commands:
   bedwars:
     description: Commande principale de HeneriaBedwars.
