--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -89,6 +89,14 @@ shop-categories:
           resource: IRON
           amount: 24
         slot: 12
+      'tempered_glass':
+        material: GLASS
+        name: "&fVerre Trempé"
+        amount: 4
+        cost:
+          resource: IRON
+          amount: 12
+        slot: 13
   'utilities_category':
     title: "Utilitaires"
     rows: 5
@@ -134,6 +142,42 @@ shop-categories:
           amount: 24
         slot: 14
         action: 'POPUP_TOWER'
+      'enemy_tracker':
+        material: COMPASS
+        name: "&eBoussole Traqueuse"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 1
+        slot: 15
+        action: 'TRACKER_COMPASS'
+      'magic_sponge':
+        material: SPONGE
+        name: "&eÉponge Magique"
+        amount: 1
+        cost:
+          resource: IRON
+          amount: 20
+        slot: 16
+        action: 'MAGIC_SPONGE'
+      'safety_platform':
+        material: SLIME_BALL
+        name: "&aPlateforme de Secours"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 4
+        slot: 24
+        action: 'SAFETY_PLATFORM'
+      'healer_milk':
+        material: MILK_BUCKET
+        name: "&fLait du Guérisseur"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 4
+        slot: 25
+        action: 'HEALER_MILK'
   'armors_category':
     title: "Armures"
     rows: 3
