--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.tomashb</groupId>
     <artifactId>HeneriaBedwars</artifactId>
-    <version>0.1.2-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>HeneriaBedwars</name>
