--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -134,6 +134,51 @@ shop-categories:
           amount: 24
         slot: 14
         action: 'POPUP_TOWER'
+      'enemy_tracker':
+        material: COMPASS
+        name: "&eBoussole Traqueuse"
+        amount: 1
+        cost:
+          resource: EMERALD
+          amount: 2
+        slot: 15
+        action: 'ENEMY_TRACKER'
+      'tempered_glass':
+        material: GLASS
+        name: "&fVerre Trempé"
+        amount: 4
+        cost:
+          resource: IRON
+          amount: 12
+        slot: 16
+        action: 'TEMPERED_GLASS'
+      'magic_sponge':
+        material: SPONGE
+        name: "&eÉponge Magique"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 3
+        slot: 17
+        action: 'MAGIC_SPONGE'
+      'safety_platform':
+        material: SLIME_BLOCK
+        name: "&aPlateforme de Secours"
+        amount: 1
+        cost:
+          resource: IRON
+          amount: 20
+        slot: 18
+        action: 'SAFETY_PLATFORM'
+      'healer_milk':
+        material: MILK_BUCKET
+        name: "&fLait du Guérisseur"
+        amount: 1
+        cost:
+          resource: GOLD
+          amount: 6
+        slot: 19
+        action: 'HEALER_MILK'
   'armors_category':
     title: "Armures"
     rows: 3
