fix(polish): Final polish pass for shop, generators and messages

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -36,7 +36,9 @@ game:
   countdown-cancelled: "&cDécompte annulé : pas assez de joueurs."
   bed-destroyed-title: "&c&lDESTRUCTION DE LIT !"
   bed-destroyed-subtitle: "Lit de l'équipe {team} détruit par {player}"
-  bed-destroyed-chat: "&cLe lit de l'équipe {team} a été détruit par {player}!"
+  bed-destroyed-chat: "{victim_team_color}Le lit de l'équipe {victim_team_name} &fa été pulvérisé par {attacker_color}{attacker_name}&f !"
+  player-kill-by-player: "{victim_color}{victim_name} &fa été tué par {attacker_color}{attacker_name}&f."
+  player-kill-void: "{victim_color}{victim_name} &fest tombé dans le vide."
   respawn-title: "&cVOUS ÊTES MORT !"
   respawn-subtitle: "Réapparition dans &e{seconds}s"
   elimination-title: "&c&lÉLIMINATION !"
