--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -74,6 +74,14 @@ shop-categories:
           resource: IRON
           amount: 4
         slot: 10
+      'sandstone':
+        material: SANDSTONE
+        name: "&eGrès"
+        amount: 16
+        cost:
+          resource: IRON
+          amount: 12
+        slot: 11 # À côté de la laine
       'oak-planks':
         material: OAK_PLANKS
         name: "&6Planches de Chêne"
@@ -81,7 +89,7 @@ shop-categories:
         cost:
           resource: IRON
           amount: 12
-        slot: 11
+        slot: 12
       'end-stone':
         material: END_STONE
         name: "&ePierre de l'End"
@@ -89,7 +97,15 @@ shop-categories:
         cost:
           resource: IRON
           amount: 24
-        slot: 12
+        slot: 13
+      'obsidian':
+        material: OBSIDIAN
+        name: "&5Obsidienne"
+        amount: 2
+        cost:
+          resource: EMERALD
+          amount: 4
+        slot: 14 # Dans la rangée des items chers
       'tempered_glass':
         material: GLASS
         name: "&fVerre Trempé"
@@ -97,8 +113,24 @@ shop-categories:
         cost:
           resource: IRON
           amount: 12
-        slot: 13
+        slot: 15
         action: 'TEMPERED_GLASS'
+      'ladders':
+        material: LADDER
+        name: "&fÉchelles"
+        amount: 8
+        cost:
+          resource: IRON
+          amount: 4
+        slot: 19 # Dans la deuxième rangée pour les utilitaires
+      'cobweb':
+        material: COBWEB
+        name: "&fToile d'Araignée"
+        amount: 1
+        cost:
+          resource: IRON
+          amount: 20
+        slot: 20 # À côté des échelles
 
   'utilities_category':
     title: "Utilitaires"
