feat(core): Implement per-arena chat and tablist isolation

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,7 @@
 main-lobby: {}
 void-kill-height: 0
 trap-radius: 10
+chat-format: "[{team_color}{team_name}] {player_name}: {message}"
 
 database:
     type: sqlite # sqlite or mysql
