feat(release)!: Final design polish for v1.0.0

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -49,14 +49,14 @@ game:
   countdown-cancelled: "&cDécompte annulé : pas assez de joueurs."
   bed-destroyed-title: "&c&lDESTRUCTION DE LIT !"
   bed-destroyed-subtitle: "Lit de l'équipe {team} détruit par {player}"
-  bed-destroyed-chat: "{victim_team_color}Le lit de l'équipe {victim_team_name} &fa été pulvérisé par {attacker_color}{attacker_name}&f !"
-  player-kill-by-player: "{victim_color}{victim_name} &fa été tué par {attacker_color}{attacker_name}&f."
-  player-kill-void: "{victim_color}{victim_name} &fest tombé dans le vide."
+  bed-destroyed-chat: "&c✘ {victim_team_color}{victim_team_name} &7a perdu son lit par {attacker_color}{attacker_name}&7 !"
+  player-kill-by-player: "&7» {victim_color}{victim_name} &7a été tué par {attacker_color}{attacker_name}&7."
+  player-kill-void: "&7» {victim_color}{victim_name} &7est tombé dans le vide."
   respawn-title: "&cVOUS ÊTES MORT !"
   respawn-subtitle: "Réapparition dans &e{seconds}s"
   elimination-title: "&c&lÉLIMINATION !"
   elimination-subtitle: "&e{player}&f a été éliminé."
-  team-win: "&aL'équipe {team} remporte la partie !"
+  team-win: "&6» &fL'équipe {team} remporte la partie !"
   win-title: "&a&lVICTOIRE !"
   win-subtitle: "&fÉquipe {team}"
   no-winner: "&eLa partie se termine sans gagnant."
@@ -100,6 +100,8 @@ admin:
   delete-pending: "&eTapez /bw admin confirmdelete {arena} dans 30s pour confirmer la suppression."
   delete-confirmed: "&aL'arène {arena} a été supprimée."
   delete-expired: "&cConfirmation expirée pour l'arène {arena}."
+  bypass-enabled: "&aMode bypass activé."
+  bypass-disabled: "&cMode bypass désactivé."
 
   menus:
     admin-main-title: "&8HeneriaBedwars - Administration"
