feat(polish): Final UI, gameplay and NPC polishing pass

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -35,7 +35,9 @@ generator-holograms:
   formats:
     DIAMOND:
       - "&b&l♦ Diamants ♦"
+      - "&fNiveau &e{tier}"
       - "&fApparition dans &a{time}s"
     EMERALD:
       - "&a&l❇ Émeraudes ❇"
+      - "&fNiveau &e{tier}"
       - "&fApparition dans &a{time}s"
