--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,31 +1,31 @@
-prefix: ""
+prefix: "&b[HBW]&r "
 
 server:
   join-message: "&a+ &7{player}"
   leave-message: "&c- &7{player}"
 
 errors:
-  no-permission: "&cVous n'avez pas la permission d'exécuter cette commande."
-  not-a-player: "&cCette commande est réservée aux joueurs."
-  player-not-found: "&cJoueur introuvable."
-  arena-not-found: "&cArène introuvable."
-  arena-not-available: "&cCette arène n'est pas disponible."
-  already-in-arena: "&cVous êtes déjà dans une arène."
-  not-in-arena: "&cVous n'êtes pas dans une arène."
-  unknown-subcommand: "&cSous-commande inconnue."
-  no-team: "&cVous n'avez pas d'équipe."
-  break-own-bed: "&cVous ne pouvez pas casser votre propre lit."
-  not-enough-resource: "&cVous n'avez pas assez de {resource} !"
-  not-enough-diamonds: "&cVous n'avez pas assez de diamants !"
-  upgrade-max-level: "&cCette amélioration est déjà au maximum."
-  trap-already-bought: "&cCe piège a déjà été acheté."
-  category-not-found: "&cCatégorie introuvable."
-  lobby-not-set: "&cLe lobby n'est pas défini."
-  team-incomplete: "&cToutes les équipes n'ont pas leur spawn et leur lit définis."
-  no-teams-configured: "&cAucune équipe configurée."
-  build-outside-boundaries: "&cVous ne pouvez pas construire en dehors de la zone autorisée."
-  arena-full-or-started: "&cCette arène est pleine ou déjà en cours."
-  command-disabled-in-game: "&cVous ne pouvez pas utiliser cette commande en pleine partie."
+  no-permission: "&c✖ &7Vous n'avez pas la permission d'exécuter cette commande."
+  not-a-player: "&c✖ &7Cette commande est réservée aux joueurs."
+  player-not-found: "&c✖ &7Joueur introuvable."
+  arena-not-found: "&c✖ &7Arène introuvable."
+  arena-not-available: "&c✖ &7Cette arène n'est pas disponible."
+  already-in-arena: "&c✖ &7Vous êtes déjà dans une arène."
+  not-in-arena: "&c✖ &7Vous n'êtes pas dans une arène."
+  unknown-subcommand: "&c✖ &7Sous-commande inconnue."
+  no-team: "&c✖ &7Vous n'avez pas d'équipe."
+  break-own-bed: "&c✖ &7Vous ne pouvez pas casser votre propre lit."
+  not-enough-resource: "&c✖ &7Vous n'avez pas assez de {resource} !"
+  not-enough-diamonds: "&c✖ &7Vous n'avez pas assez de diamants !"
+  upgrade-max-level: "&c✖ &7Cette amélioration est déjà au maximum."
+  trap-already-bought: "&c✖ &7Ce piège a déjà été acheté."
+  category-not-found: "&c✖ &7Catégorie introuvable."
+  lobby-not-set: "&c✖ &7Le lobby n'est pas défini."
+  team-incomplete: "&c✖ &7Toutes les équipes n'ont pas leur spawn et leur lit définis."
+  no-teams-configured: "&c✖ &7Aucune équipe configurée."
+  build-outside-boundaries: "&c✖ &7Vous ne pouvez pas construire en dehors de la zone autorisée."
+  arena-full-or-started: "&c✖ &7Cette arène est pleine ou déjà en cours."
+  command-disabled-in-game: "&c✖ &7Vous ne pouvez pas utiliser cette commande en pleine partie."
 
 commands:
   main-usage: "&eUsage: /{label} <admin|join|leave>"
