Fix quick buy glass, NPC skins and hologram, forge emerald spawn

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -43,7 +43,7 @@ generator-holograms:
       - "&fApparition dans &a{time}s"
 npc-skins:
   item-shop: "MHF_Villager"
-  upgrade-shop: "MHF_Villager"
+  upgrade-shop: "MHF_Zombie"
 lobby-shop-item:
   name: "&aBoutique Cosmétiques"
   lore:
